@@ -1616,6 +1616,24 @@ public:
     string emitC() override { V3ERROR_NA_RETURN(""); }
     bool cleanOut() const override { return true; }
 };
+class AstGetInitialRandomSeed final : public AstNodeExpr {
+    // Verilog $get_initial_random_seed()
+public:
+    explicit AstGetInitialRandomSeed(FileLine* fl)
+        : ASTGEN_SUPER_GetInitialRandomSeed(fl) {
+        dtypeSetSigned32();
+    }
+    ASTGEN_MEMBERS_AstGetInitialRandomSeed;
+    string emitVerilog() override { return "$get_initial_random_seed()"; }
+    string emitC() final override { V3ERROR_NA_RETURN(""); }
+    bool cleanOut() const override { return true; }
+    bool isGateOptimizable() const override { return false; }
+    bool isPredictOptimizable() const override { return true; }
+    bool isPure() override { return true; }
+    bool isSystemFunc() const override { return true; }
+    int instrCount() const override { return INSTR_COUNT_PLI; }
+    bool sameNode(const AstNode* /*samep*/) const override { return true; }
+};
 class AstImplication final : public AstNodeExpr {
     // Verilog Implication Operator
     // Nonoverlapped "|=>"
