@@ -1341,6 +1341,9 @@ public:
                       / v3Global.rootp()->timeprecision().multiplier()));
         puts(")");
     }
+    void visit(AstGetInitialRandomSeed* nodep) override {
+        putns(nodep, "vlSymsp->_vm_contextp__->randSeed()");
+    }
     void visit(AstTimeFormat* nodep) override {
         putns(nodep, "VL_TIMEFORMAT_IINI(");
         if (nodep->unitsp()) {
